# smb_honeypot

./: README.md  docker-compose.yml  passwords.txt  schema.sql  users.txt
data/: brute_force_events.csv  dataset.csv  honeypot.db  recent_logs.csv  top_attackers.csv
proxy/: Dockerfile  proxy.py
scripts/: check_flag.py  check_flag.sh  dataset_exporter.py  db_inspector.py  db_tail.py  export_query.py  sample_queries.sql
scripts/traffic simulation/: generate_strong_traffic.py  generate_test_traffic.py  simulate_interactions.py
smb_server/: Cargo.toml  Dockerfile
smb_server/src/: main.rs
smb_share/: FLAG.txt
